--- a/typer/templates/typer/instructions.html
+++ b/typer/templates/typer/instructions.html
@@ -4,7 +4,7 @@
 
 {% block content %}
   {% if user.is_authenticated %}
-    <h2>Instructions for entering data for die : <i>{{die.name}}</i></h2>
+    <h2>Instructions for entering data for task : <i>{{die.name}}</i></h2>
     {{ die.instructions | safe }}
   {% else %}
     <h2>Please either <a href="{% url 'login' %}">login</a> or <a href="{% url 'register' %}">register</a> for an account before reading the instructions.</h2>
